--- a/app/package.json
+++ b/app/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "apexcharts": "^3.6.8",
     "bootstrap": "^4.3.1",
     "react": "^16.8.6",
+    "react-apexcharts": "^1.3.3",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.2",
